--- a/10/sass/_variables.scss
+++ b/10/sass/_variables.scss
@@ -1,8 +1,8 @@
 $purple: #540d6e;
 $pink: #ee4266;
 $yellow: #ffd23f;
-$teal: #21bb97;
-$green: #1c9c65;
+$teal: #2a8f8f;
+$green: #0a4e31;
 
 $bodyFont: 'Poppins', sans-serif;
 $displayFont: 'Bangers', cursive;
